# eros2.0

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  playbook.md  pyproject.toml  skills-lock.json  wiki.md
diagrams/: orquestador-flujo.drawio
docs/: grafo.md
docs/adr/: 0001-agendamiento-calendly-autoservicio-primero.md  0002-frontera-de-memoria.md  0003-chequeo-de-crisis-prioritario.md  0004-orquestacion-supervisor-langgraph.md  0005-faq-wiki-en-contexto-no-rag.md
log-viewer/: app.js  index.html  nginx.conf  styles.css
scripts/: clear-llm-logs.sh  clear-memory-for-user.sh  clear-memory.sh  reset-logs-db.sh
src/agente/: __init__.py  agent.py  app.py  calendly.py  chatwoot.py  cli.py  config.py  graph.py  llm.py  llm_logger.py  prompt.py  recordatorios.py  routers.py  state.py  store.py  tools.py  webhook.py
src/agente/nodes/: __init__.py  agentes.py  citas.py  contexto.py  egress.py  gates.py  supervisor.py  util.py
tests/: test_agent.py  test_agents.py  test_calendly.py  test_chatwoot.py  test_citas.py  test_crisis.py  test_history_compaction.py  test_llm_logger.py  test_memoria.py  test_prompt.py  test_supervisor.py  test_tools.py  test_webhook.py
