[project]
name = "agente"
version = "0.1.0"
description = "Asistente de clínica psicológica (Anthropic SDK · loop ReAct)"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic-settings>=2.0.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agente"]

[tool.pytest.ini_options]
testpaths = ["tests"]
